--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -6,12 +6,14 @@
 
 body {
     margin: auto;
-    font-family: Arial, helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; 
+    min-height: 100vh; 
+    width: 100%; 
 }
 
 #site-wrapper {
     width: 100%; 
-    height: 100%; 
+    height: 100vh; 
     margin: 0%;
     background-color: paleturquoise; 
 }
@@ -21,9 +23,6 @@ body {
     background-color: rgb(207, 250, 250); 
 }
 
-#header-inner{
-    width: 100%; 
-}
 
 #logo {
     width: 125px; 
@@ -32,33 +31,130 @@ body {
     float: left;
 }
 #site-name{
+    padding: 12px;
     width: 100%; 
     height: 125px;
     background-color: beige;
+    text-shadow: 2px 2px gray;
 }
+
 #head-navi {
     width: 100%; 
     background-color: rgb(255, 177, 81);
 }
 
+
 #content-wrapper {
     width:100%; 
-    overflow: hidden;
+    display: flex; 
+    height: 70vh; 
 }
 
-#content-inner {
-    width: 100%;
-}
 
-#sidebar-left {
+#sidebar-left { 
     width: 20%; 
-    min-height: 40%; 
     float: left;
-    background-color: rgb(220, 183, 255);
+    background-color: rgb(220, 183, 255);   
+    padding: 10px;
 }
 
 #content-main {
     width: 80%; 
-    float: right; 
-    background-color: aqua; 
+    float: left; 
+    background-color: aqua;  
+    padding: 10px; 
 }
+
+#footer-wrapper {
+    width:100%;
+    overflow: hidden;
+    display: flex; 
+    height: 15vh;
+}
+
+#footer-inner-left {
+    width: 30%;
+    display: flex;
+    background-color: azure;
+    float: left;
+}
+
+#footer-inner-bottom{
+    width: 70%; 
+    display: flex; 
+    background-color: lightslategray; 
+    float: right;
+}
+
+
+.nav {
+    list-style: none;
+    text-decoration: none;
+    color: darkblue;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-link {
+    text-decoration: none;
+    border-bottom: 1px solid gray;
+    display: block;
+    padding: 4px;
+}
+
+.nav-link:link, .nav-link:visited{
+    display: block;
+    background: #afc8ff;
+}
+
+.nav-link:hover {
+    background: #afc8dd;
+    font-weight: bold;
+    color: whitesmoke;
+}
+
+/* Renders the collaspible menu */
+.collapsible {
+    display: block;
+    cursor: pointer;
+}
+
+input#menu {
+    display: none;
+}
+
+
+.collapsible#menu{
+    max-height: 0; 
+    overflow: hidden; 
+}
+
+/* when the checkbox is not checked */
+input:not(:checked) ~label ::after {
+    content: "(+)"; 
+}
+/*when the chkeckbox is checked */
+input:checked ~ label::after {
+    font-weight: bold;
+    content: "(-)";
+}
+/* display the menu when clicked */
+input:checked ~ #menu {
+    max-height: 100%;
+}
+
+/*media query for the mobile version*/
+@media (max-width: 600px) {
+    #content-wrapper, #footer-wrapper, #content-inner, #content-left, #content-main, #sidebar-left, #footer-inner-left, #footer-inner-bottom {
+      width: 100%;
+      height: auto; 
+      display: block; 
+    }
+    #site-name {
+        display: none;
+    }
+    #logo{
+        width: 100%; 
+    }
+  }
