--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -35,8 +35,10 @@ body {
     width: 100%; 
     height: 125px;
     background-color: beige;
+    color: #222222;
     text-shadow: 2px 2px gray;
 }
+
 
 #head-navi {
     width: 100%; 
@@ -86,7 +88,7 @@ body {
     float: right;
 }
 
-
+/* Μenu CSS */
 .nav {
     list-style: none;
     text-decoration: none;
@@ -115,6 +117,7 @@ body {
 }
 
 /* Renders the collaspible menu */
+
 .collapsible {
     display: block;
     cursor: pointer;
@@ -131,13 +134,13 @@ input#menu {
 }
 
 /* when the checkbox is not checked */
-input:not(:checked) ~label ::after {
-    content: "(+)"; 
+input:not(:checked) ~label ::before {
+    content: " [+] "; 
 }
 /*when the chkeckbox is checked */
-input:checked ~ label::after {
+input:checked ~ label::before {
     font-weight: bold;
-    content: "(-)";
+    content: " [-] ";
 }
 /* display the menu when clicked */
 input:checked ~ #menu {
