--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -27,22 +27,27 @@ body {
 #logo {
     width: 125px; 
     height: 125px; 
-    background-color: aqua;
+    background-color: #080d20;
     float: left;
 }
 #site-name{
     padding: 12px;
     width: 100%; 
     height: 125px;
-    background-color: beige;
-    color: #222222;
+    background-color: #080d20;
+    color: whitesmoke;
     text-shadow: 2px 2px gray;
+    font-size: 5vh; 
 }
 
+#site-name h1 {
+    padding: 2px; 
+    margin: 2px; 
+}
 
 #head-navi {
     width: 100%; 
-    background-color: rgb(255, 177, 81);
+    background-color: #ffb151;
 }
 
 
@@ -56,14 +61,14 @@ body {
 #sidebar-left { 
     width: 20%; 
     float: left;
-    background-color: rgb(220, 183, 255);   
+    background-color: #afc8dd;   
     padding: 10px;
 }
 
 #content-main {
     width: 80%; 
     float: left; 
-    background-color: aqua;  
+    background-color: #d4e5ff;  
     padding: 10px; 
 }
 
@@ -75,17 +80,22 @@ body {
 }
 
 #footer-inner-left {
+    padding: 10px; 
     width: 30%;
     display: flex;
-    background-color: azure;
+    background-color: #080d20;
     float: left;
+    border-right: 2px solid whitesmoke; 
+    color: #afc8dd
 }
 
 #footer-inner-bottom{
+    padding: 10px;
     width: 70%; 
     display: flex; 
-    background-color: lightslategray; 
+    background-color: #080d20; 
     float: right;
+    color: #afc8dd; 
 }
 
 /* Μenu CSS */
@@ -116,6 +126,41 @@ body {
     color: whitesmoke;
 }
 
+/* Stuatus bars */ 
+
+.error-bar{
+    width:100%; 
+    padding: 12px;
+    border: 2px 2px solid red; 
+    background: pink;
+    border-radius: 4px; 
+}
+
+.success-bar{
+    width:100%; 
+    padding: 12px;
+    border: 2px 2px solid green; 
+    background: lightgreen;
+    border-radius: 4px; 
+}
+
+.warning-bar{
+    width:100%; 
+    padding: 12px;
+    border: 2px 2px solid yello; 
+    background: palegoldenrod;
+    border-radius: 4px; 
+}
+
+.info-bar{
+    width:100%; 
+    padding: 12px;
+    border: 2px 2px solid red; 
+    background: pink;
+    border-radius: 4px; 
+}
+
+
 /* Renders the collaspible menu */
 
 .collapsible {
@@ -127,6 +172,10 @@ input#menu {
     display: none;
 }
 
+label[for=menu]{
+    width:100%; 
+    background-color: #afc8dd; 
+}
 
 .collapsible#menu{
     max-height: 0; 
@@ -135,12 +184,12 @@ input#menu {
 
 /* when the checkbox is not checked */
 input:not(:checked) ~label ::before {
-    content: " [+] "; 
+    content: " [▲] "; 
 }
 /*when the chkeckbox is checked */
 input:checked ~ label::before {
     font-weight: bold;
-    content: " [-] ";
+    content: " [▼] ";
 }
 /* display the menu when clicked */
 input:checked ~ #menu {
@@ -155,9 +204,11 @@ input:checked ~ #menu {
       display: block; 
     }
     #site-name {
-        display: none;
+        height: auto;  
+        align-content: center;
+        width:100%; 
     }
     #logo{
-        width: 100%; 
+        display: none; 
     }
   }
