--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -4,97 +4,94 @@
     box-sizing: border-box;
 }
 
-body {
-    margin: auto;
-    font-family: Arial, Helvetica, sans-serif; 
-    min-height: 100vh; 
-    width: 100%; 
+html, body {
+    margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;   
+    height: 100%;
 }
 
-#site-wrapper {
-    width: 100%; 
-    height: 100vh; 
-    margin: 0%;
-    background-color: paleturquoise; 
-}
 
-#header-wrapper{
+.header-wrapper{
     width: 100%; 
     background-color: rgb(207, 250, 250); 
 }
 
-
-#logo {
+.logo {
     width: 125px; 
     height: 125px; 
     background-color: #080d20;
     float: left;
 }
-#site-name{
+.site-name{
     padding: 12px;
     width: 100%; 
     height: 125px;
     background-color: #080d20;
     color: whitesmoke;
     text-shadow: 2px 2px gray;
-    font-size: 5vh; 
+    font-size: 2vw; 
 }
 
-#site-name h1 {
+.site-name h1 {
     padding: 2px; 
     margin: 2px; 
 }
 
-#head-navi {
-    width: 100%; 
+.head-navi {
+    padding: 15px; 
+    overflow: hidden;
+    top:0; 
     background-color: #ffb151;
 }
 
+/* CONTENT AREA */ 
 
-#content-wrapper {
-    width:100%; 
+.content-wrapper {  
+    min-height: 71vh;
     display: flex; 
-    height: 70vh; 
+    flex-wrap:wrap;  
 }
 
-
-#sidebar-left { 
-    width: 20%; 
-    float: left;
-    background-color: #afc8dd;   
-    padding: 10px;
-}
-
-#content-main {
-    width: 80%; 
-    float: left; 
+.content-main {
+  flex: 80%; 
     background-color: #d4e5ff;  
     padding: 10px; 
 }
 
-#footer-wrapper {
-    width:100%;
-    overflow: hidden;
-    display: flex; 
-    height: 15vh;
+/* SIDEBAR AREA */
+.sidebar-left { 
+
+    flex: 20%; 
+    background-color: #afc8dd;   
+    padding: 10px;
 }
 
-#footer-inner-left {
-    padding: 10px; 
-    width: 30%;
+.sidebar-row{
+    width: 100%;
+    background-color: #81b2da;
+    padding: 12px 12px 12px 1px; 
+    border-radius: 4px; 
+}
+
+/* FOOTER */
+
+.footer-wrapper {
+    overflow: hidden;
     display: flex;
+}
+
+.footer-inner-left {
+    padding: 20px;
+    flex: 30%;
     background-color: #080d20;
-    float: left;
     border-right: 2px solid whitesmoke; 
     color: #afc8dd
 }
 
-#footer-inner-bottom{
-    padding: 10px;
-    width: 70%; 
-    display: flex; 
+.footer-inner-right{
+    padding: 20px; 
+    flex: 70%; 
     background-color: #080d20; 
-    float: right;
     color: #afc8dd; 
 }
 
@@ -102,7 +99,7 @@ body {
 .nav {
     list-style: none;
     text-decoration: none;
-    color: darkblue;
+    color: rgb(7, 7, 36);
     font-weight: bold;
     margin: 0;
     padding: 0;
@@ -113,6 +110,7 @@ body {
     border-bottom: 1px solid gray;
     display: block;
     padding: 4px;
+    border-radius: 4px; 
 }
 
 .nav-link:link, .nav-link:visited{
@@ -121,7 +119,7 @@ body {
 }
 
 .nav-link:hover {
-    background: #afc8dd;
+    background: #527592;
     font-weight: bold;
     color: whitesmoke;
 }
@@ -155,8 +153,8 @@ body {
 .info-bar{
     width:100%; 
     padding: 12px;
-    border: 2px 2px solid red; 
-    background: pink;
+    border: 2px 2px solid #5998ff; 
+    background: lightskyblue;
     border-radius: 4px; 
 }
 
@@ -174,7 +172,8 @@ input#menu {
 
 label[for=menu]{
     width:100%; 
-    background-color: #afc8dd; 
+    background-color: #81b2da; 
+    border-radius: 4px; 
 }
 
 .collapsible#menu{
@@ -183,11 +182,11 @@ label[for=menu]{
 }
 
 /* when the checkbox is not checked */
-input:not(:checked) ~label ::before {
+input:not(:checked) ~ label[for='menu'] ::before {
     content: " [▲] "; 
 }
 /*when the chkeckbox is checked */
-input:checked ~ label::before {
+input:checked ~ label[for='menu']::before {
     font-weight: bold;
     content: " [▼] ";
 }
@@ -198,17 +197,22 @@ input:checked ~ #menu {
 
 /*media query for the mobile version*/
 @media (max-width: 600px) {
-    #content-wrapper, #footer-wrapper, #content-inner, #content-left, #content-main, #sidebar-left, #footer-inner-left, #footer-inner-bottom {
+    .content-wrapper, .footer-wrapper, .content-main, .sidebar-left, .footer-inner-left, .footer-inner-right {
       width: 100%;
       height: auto; 
+      min-height: unset;
       display: block; 
     }
-    #site-name {
+    .site-name {
         height: auto;  
         align-content: center;
         width:100%; 
+        
     }
-    #logo{
+    .footer-inner-left{
+        border: 0px; 
+    }
+    .logo{
         display: none; 
     }
   }
