--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -183,6 +183,83 @@ html, body {
 }
 
 
+/*  Tables */ 
+
+table {
+    width: 100%; 
+    border-radius: 4px; 
+    margin: 6px; 
+    padding: 10px; 
+}
+
+table, th, td {
+    border-collapse: collapse;
+    border: 1px solid darkgrey; 
+}
+
+td {
+    text-align: center;
+    padding: 3px; 
+}
+
+th {
+    background-color: #e1f7ff; 
+    padding: 12px; 
+    font-size: large;
+}
+
+th.section-header {
+    background-color: #bde1ff; 
+}
+
+tr:hover {
+    background-color: #e2efff;
+}
+
+/* Link Buttons */ 
+
+.link-button {
+    border-radius: 4px; 
+    background-color:#5998ff;
+    color: white; 
+    padding: 10px; 
+    text-decoration: none; 
+    font-weight: bolder; 
+}
+
+.full {
+    width: 100%; 
+    display: block;
+    margin: 0;
+}
+
+.link-button:hover{
+    background-color: #527592; 
+    color: whitesmoke;
+}
+
+.link-button:visited{
+    text-decoration: none; 
+}
+
+/* SPAN TEXT */ 
+
+span.green {
+    display: block;
+    margin: 0;
+    padding: 10px; 
+    background-color: lightgreen;
+    font-weight: bolder;
+}
+
+span.red {
+    display: block;
+    margin: 0;
+    padding: 10px; 
+    background-color: pink;
+    font-weight: bolder;
+}
+
 /* Renders the collaspible menu */
 
 .collapsible {
