--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -208,8 +208,12 @@ th {
     font-size: large;
 }
 
-th.section-header {
-    background-color: #bde1ff; 
+.th-section-header {
+    background-color: #aed7fe; 
+}
+
+tr {
+    font-size: initial; 
 }
 
 tr:hover {
@@ -222,9 +226,10 @@ tr:hover {
     border-radius: 4px; 
     background-color:#5998ff;
     color: white; 
-    padding: 10px; 
+    padding: 10px;  
     text-decoration: none; 
     font-weight: bolder; 
+    display: inline-block; 
 }
 
 .full {
